discussion/kv_engine/168175/168175_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50192: Hold per VB lock during getAllKeys for Nexus

We can't ensure consistency between the two KVStores without doing
so.

Change-Id: Ia0b959b79a0b8d9913b7d4e41eaa85a49c4e2d56

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-04 13:03:18.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-04 13:27:26.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36092/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36092/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14635/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23: error: use of undeclared identifier "vb" [clang-diagnostic-error]
    auto lh = getLock(vb);
                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14635/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: use of undeclared identifier "vb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14635/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42579/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc(1793): error C2065: "vb": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42579/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4333/ : FAILURE

Compile error at [2022-01-04T13:25:39.174Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: ?vb? was not declared in this scope; did you mean ?Db??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4333/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24694/ : FAILURE

Compile error at [2022-01-04T13:19:04.765Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24694/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17358/ : FAILURE

Compile error at [2022-01-04T13:19:32.100Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17358/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4275/ : FAILURE

Compile error at [2022-01-04T13:19:09.324Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4275/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15435/ : FAILURE

Compile error at [2022-01-04T13:20:28.902Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15435/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16282/ : FAILURE

Compile error at [2022-01-04T13:20:25.337Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: ?vb? was not declared in this scope; did you mean ?Db??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16282/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16575/ : FAILURE

Compile error at [2022-01-04T13:18:51.036Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:1793:23:
error: ?vb? was not declared in this scope; did you mean ?Db??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16575/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13466/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
